--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-react",
-  "homepage": "https://wustlcse204.github.io/09-todo-react-group-evanmorrissophiahuynh",
+  "homepage": "https://wustlcse204.github.io/09-todo-react-group-evanmorrissophiahuynh.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
